kubernetes/apps/elastic/search/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: elastic
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/is-public: "true"
spec:
  ingressClassName: external
  rules:
    - host: &host elastic.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: elasticsearch-es-http
                port:
                  number: 9200
            path: /
            pathType: Prefix

  tls:
    - hosts:
        - *host

  secretName: elasticsearch-tls
