kubernetes/apps/elastic/search/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: elasticsearch
  namespace: elastic
spec:
  hosts:
    - elastic.enchantednatures.com
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: elasticsearch-es-http.elastic.svc.cluster.local
            port:
              number: 9200
